# bento

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
assets/logo/: README.md
docs/: config.toml  justfile
docs/content/: _index.md  getting-started.md  installation.md  introduction.md
docs/content/cli/: _index.md  check.md  config.md  convert.md  flags.md  probe.md  repair.md
docs/content/configuration/: _index.md  audio.md  output.md  overview.md  subtitles.md  video.md
docs/content/getting-started/: _index.md  building-a-configuration.md  encoding-example.md  installation.md  what-is-bento.md
docs/src/: goyo-themes.custom.js  main.css  tailwind.config.js
docs/static/css/: custom-main.css  main.css
docs/static/icons/: site.webmanifest
docs/templates/macros/: toc.html
src/: bootstrap.rs  cli.rs  error.rs  ffmpeg.rs  layers.rs  lib.rs  main.rs  probe.rs  progress.rs  render.rs  repair.rs  resolve.rs  set_override.rs  subtitles.rs  validate.rs  verbosity.rs
src/config/: audio.rs  mod.rs  output.rs  subtitles.rs  video.rs
src/pipeline/: ffmpeg_args.rs  mod.rs  naming.rs  probe.rs  subtitle_prep.rs
tests/: convert.rs  repair.rs
