[package]
name = "bento"
version = "1.0.0"
edition = "2024"
authors = ["Christian Jansen <chris+bento@claypotfrog.com>"]
description = "A configuration-driven CLI for converting and re-encoding video files built on top of FFmpeg."
license = "MIT OR Apache-2.0"
repository = "https://github.com/chris-t-jansen/bento"
homepage = "https://github.com/chris-t-jansen/bento"
readme = "README.md"
keywords = ["ffmpeg", "video", "transcode", "cli", "anime"]
categories = ["command-line-utilities", "multimedia::video"]

[lints.clippy]
# Clippy nags about combining `if A { if B { ... } }` into `if A && B { ... }`,
# including across `if let` patterns with `let`-chains. The rewrite often hurts
# readability when conditions are long, so we opt out project-wide.
collapsible_if = "allow"
collapsible_match = "allow"

[dependencies]
clap = { version = "4", features = ["derive"] }
console = "0.16"
directories = "5"
indicatif = "0.17"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
toml = "0.9"
which = "8.0.2"
